client/src/components/Header/header.css
/* HEADER CONTAINER STYLES */
.header-container {
  /* grid-area: h; */

  display: grid;
  grid-template-columns: 10% 90%;

  background-color: #00275e;
  padding: 10px;
  position: fixed;
  z-index: 9000;
  width: 100vw;
}

.hide {
  display: none;
}
/* END OF HEADER CONTAINER STYLES */

/* TITLE STYLES */
.header-title-container {
  grid-column: 2 / -1;
  grid-row: 1 / 2;
  place-self: center;
  margin-left: 10px;
}

.header-title-container h2 {
  color: #ff7f00;
  text-align: center;
}

.header-title-1 {
  font-size: 25px;
  margin: 0;
}

.header-title-2 {
  font-size: 14px;
  margin-bottom: 10px;
  margin-top: 0px;
}


/* END OF TITLE STYLES */

/* BURGER BUTTON STYLES */
.burger-button {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
  align-self: start;
}

.fa-bars {
    color: white;
    font-size: 40px;
    margin-bottom: 5px;
}
/* END OF BURGER BUTTON STYLES */

/* MEDIA QUERIES */
@media screen and (min-width: 500px) {
  .header-title-2 {
    font-size: 20px;
  }
}

@media screen and (min-width: 900px) {
  .header-container {
    grid-template-columns: 100%;
  }

  .header-title-container {
    grid-column: 1 / -1;
  }

  .burger-button {
    display: none;
  }
}
/* END OF MEDIA QUERIES */

